@@ -1,3 +1,8 @@
+Thu  Sep 9  2004	H. Wade Minter (minter@lunenburg.org)
+     * Move the default setup stuff (formerly in quicksetup.pl) into the
+       main program, since we don't have to deal with the complexity of
+       MySQL anymore.
+
 Wed  Sep 8  2004	H. Wade Minter (minter@lunenburg.org)
      * Work around the lack of $dbh->rows in SQLite by implementing 
        a hand-rolled row counter.
